--- a/cupti/02_profiling_injection/Makefile
+++ b/cupti/02_profiling_injection/Makefile
@@ -9,14 +9,14 @@ endif
 CUDA_INSTALL_PATH ?= /usr/local/cuda/
 PROFILER_HOST_UTILS_SRC ?= ../00_extensions/src/profilerhost_util
 NVCC := "$(CUDA_INSTALL_PATH)/bin/nvcc"
-INCLUDES := -I"$(CUDA_INSTALL_PATH)/include" -I$(CUDA_INSTALL_PATH)include -I../00_extensions/include/profilerhost_util -I../00_extensions/include/c_util -I../00_common
+INCLUDES := -I"$(CUDA_INSTALL_PATH)/include" -I/usr/local/cuda/extras/CUPTI/include -I../00_extensions/include/profilerhost_util -I../00_extensions/include/c_util
 
 TARGET_ARCH ?= $(HOST_ARCH)
 TARGET_OS ?= $(shell uname | tr A-Z a-z)
 
 # Set required library paths.
 # In the case of cross-compilation, set the libs to the correct ones under /usr/local/cuda/targets/<TARGET_ARCH>-<TARGET_OS>/lib
-NVCCFLAGS :=
+
 ifeq ($(OS), Windows_NT)
     LIB_PATH ?= ..\..\lib64
 else
@@ -26,7 +26,7 @@ else
         LIB_PATH ?= $(CUDA_INSTALL_PATH)/targets/$(TARGET_ARCH)-$(TARGET_OS)/lib
         TARGET_CUDA_PATH = -L $(LIB_PATH)/stubs
     else
-        EXTRAS_LIB_PATH := $(CUDA_INSTALL_PATH)lib64
+        EXTRAS_LIB_PATH := /usr/local/cuda/extras/CUPTI/lib64
         LIB_PATH ?= $(CUDA_INSTALL_PATH)/lib64
     endif
 endif
@@ -55,29 +55,8 @@ else
     BINEXT =
 endif
 
-ifneq ($(TARGET_ARCH), $(HOST_ARCH))
-    ifeq ($(TARGET_ARCH), aarch64)
-        ifeq ($(TARGET_OS), linux)
-            HOST_COMPILER ?= aarch64-linux-gnu-g++
-        else ifeq ($(TARGET_OS),qnx)
-            ifeq ($(QNX_HOST),)
-                $(error ERROR - QNX_HOST must be passed to the QNX host toolchain)
-            endif
-            ifeq ($(QNX_TARGET),)
-                $(error ERROR - QNX_TARGET must be passed to the QNX target toolchain)
-            endif
-            HOST_COMPILER ?= $(QNX_HOST)/usr/bin/q++
-            NVCCFLAGS += --qpp-config 8.3.0,gcc_ntoaarch64le -lsocket
-        endif
-    endif
-
-    ifdef HOST_COMPILER
-        NVCC_COMPILER := -ccbin $(HOST_COMPILER)
-    endif
-endif
-
 # Gencode arguments
-SMS ?= 70 72 75 80 86 87 89 90
+SMS ?= 70 72 75 80 86 87
 # Generate SASS code for each SM architecture listed in $(SMS)
 # Needed to support enhanced compatibility
 $(foreach sm,$(SMS),$(eval GENCODE_FLAGS += -gencode arch=compute_$(sm),code=sm_$(sm)))
@@ -91,14 +70,14 @@ profiler_host_util:
 	cd $(PROFILER_HOST_UTILS_SRC) && $(MAKE)
 
 simple_target: simple_target.cu
-	$(NVCC) $(NVCC_COMPILER) $(NVCCFLAGS) -o $@ $^ $(INCLUDES) $(GENCODE_FLAGS)
+	$(NVCC) -o $@ $^ $(INCLUDES) $(GENCODE_FLAGS)
 
 complex_target: complex_target.cu
-	$(NVCC) $(NVCC_COMPILER) $(NVCCFLAGS) -o $@ $^ $(INCLUDES) -lcuda $(GENCODE_FLAGS)
+	$(NVCC) -o $@ $^ $(INCLUDES) -lcuda $(GENCODE_FLAGS)
 
 libinjection.so: injection_time.cpp
-	$(NVCC) $(NVCC_COMPILER) $(NVCCFLAGS) -o $@ $< $(INCLUDES) $(LIBS) -Ldl -Xcompiler -fPIC --shared
+	$(NVCC) -o $@ $< $(INCLUDES) -Ldl -Xcompiler -fPIC --shared
 
 .PHONY: clean
 clean:
-	rm -f simple_target simple_target.$(OBJ) complex_target complex_target.$(OBJ) libinjection.so
+	rm -f simple_target simple_target.$(OBJ) complex_target complex_target.$(OBJ) libinjection_1.so libinjection_2.so
